crates/pv-release/tests/snapshots/smoke__php_build_smoke_rejects_usr_local_linked_dylib.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_output_summary(&run)
---
(
    false,
    Some(
        1,
    ),
    "",
    "error: <out>/work/php-pair-8.4-darwin-arm64/php-8.4.20-pv1-darwin-arm64/bin/php Mach-O linked library references unmanaged runtime path /usr/local/lib/libfoo.dylib\n",
)
