crates/pv-release/tests/snapshots/smoke__php_pair_build_smoke_builds_cli_and_frankenphp_from_one_staticphp_buildroot-2.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_record_provenance(run.frankenphp_record_json.as_deref())?
---
Object {
    "build_run_id": String("local-test"),
    "pv_commit": String("0123456789abcdef0123456789abcdef01234567"),
    "recipe": String("release/artifacts/recipes/php/build.sh"),
    "source_inputs": Array [
        Object {
            "name": String("frankenphp"),
            "source_sha256": String("9944cd74d8e9635698f4412a3d26600c34fe237ff01d4638d7d83a21ef576169"),
            "source_url": String("https://sources.example.test/frankenphp.tar.gz"),
        },
        Object {
            "name": String("php"),
            "source_sha256": String("bdb89561cd7fc76f85811f972deb34bde88e335be6e19bcc6983fb364195b36d"),
            "source_url": String("https://sources.example.test/php.tar.gz"),
        },
        Object {
            "name": String("rar"),
            "source_sha256": String("ce8797a6d9fa568b862b722ed84a66fce25763481b84924cccf0adf9f6ca9c75"),
            "source_url": String("https://sources.example.test/php-rar.tar.gz"),
        },
    ],
    "source_sha256": String("9944cd74d8e9635698f4412a3d26600c34fe237ff01d4638d7d83a21ef576169"),
    "source_url": String("https://sources.example.test/frankenphp.tar.gz"),
}
