crates/pv-release/tests/snapshots/smoke__php_pair_build_smoke_rejects_runner_rpath_on_frankenphp_binary.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_output_summary(&run)
---
(
    false,
    Some(
        1,
    ),
    "",
    "error: <out>/work/php-pair-8.4-darwin-arm64/frankenphp-8.4.20-frankenphp1.12.3-pv1-darwin-arm64/bin/frankenphp Mach-O rpath references unmanaged runtime path /Users/runner/hostedtoolcache/php/lib\n",
)
