crates/pv-release/tests/snapshots/smoke__php_smoke_rejects_unexpected_extensions.snap
---
source: crates/pv-release/tests/smoke.rs
expression: command_output_summary(&output)
---
(
    false,
    Some(
        43,
    ),
    "",
    "unexpected PHP extension: xdebug\n",
)
