crates/pv-release/tests/snapshots/smoke__postgres_build_recipe_packages_pv1_supplied_extensions.snap
---
source: crates/pv-release/tests/smoke.rs
expression: "record[\"provenance\"][\"source_inputs\"]"
---
Array [
    Object {
        "name": String("openssl"),
        "source_sha256": String("a8f84a39918ec6415ce765d9b429d313ba97b8143169c172e734b9514464f5b2"),
        "source_url": String("https://github.com/openssl/openssl/releases/download/openssl-3.5.8/openssl-3.5.8.tar.gz"),
    },
]
